Fixed typo in elasticseach_type -> elasticsearch_type

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,4 @@
 
 # Elastic offers both "oss" (Apache 2.0 license) and "elastic"
 # (Elastic license). Select the type here. Either "oss" or "elastic"
-elasticseach_type: oss
+elasticsearch_type: oss
