--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,4 +7,4 @@ _elasticsearch_packages:
   elastic:
     - elasticsearch
 
-elasticsearch_packages: "{{ _elasticsearch_packages[elasticseach_type] }}"
+elasticsearch_packages: "{{ _elasticsearch_packages[elasticsearch_type] }}"
