--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,11 @@
 # Elastic offers both "oss" (Apache 2.0 license) and "elastic"
 # (Elastic license). Select the type here. Either "oss" or "elastic"
 elasticsearch_type: oss
+
+elasticsearch_network_host: 0.0.0.0
+
+elasticsearch_http_port: 9200
+
+elasticsearch_discovery_seed_hosts: []
+
+elasticsearch_cluster_initial_master_nodes: []
