--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,16 @@
     name: "{{ elasticsearch_packages }}"
     state: present
 
+- name: configure elasticsearch
+  template:
+    src: elasticsearch.yml.j2
+    dest: /etc/elasticsearch/elasticsearch.yml
+    owner: root
+    group: elasticsearch
+    mode: "0660"
+  notify:
+    - restart elasticsearch
+
 - name: start elasticsearch
   ansible.builtin.service:
     name: elasticsearch
