--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
     state: present
 
 - name: configure elasticsearch
-  template:
+  ansible.builtin.template:
     src: elasticsearch.yml.j2
     dest: /etc/elasticsearch/elasticsearch.yml
     owner: root
