Find and quote risky values.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@
 elasticsearch_type: oss
 
 # The IP address to bind on.
-elasticsearch_network_host: 0.0.0.0
+elasticsearch_network_host: "0.0.0.0"
 
 # The port to bind on.
 elasticsearch_http_port: 9200
