--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -52,7 +52,7 @@ jobs:
           - image: "fedora"
             tag: "rawhide"
           - image: "ubuntu"
-            tag: "latest"
+            tag: "focal"
           - image: "ubuntu"
             tag: "bionic"
     steps:
