Fix a variable specification.

--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -18,9 +18,8 @@ argument_specs:
         default: "0.0.0.0"
         description: The IP address to bind on.
       elasticsearch_network_port:
-        # TODO: Is this a string?
-        type: "str"
-        default: "9200"
+        type: "int"
+        default: 9200
         description: The port to bind on.
       elasticsearch_discovery_seed_hosts:
         type: "list"
