--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,7 @@
 ---
 galaxy_info:
-  author: Robert de Bock
+  author: robertdebock
   role_name: elasticsearch
-  namespace: robertdebock
   description: Install and configure Elasticsearch on your system.
   license: Apache-2.0
   company: none
@@ -17,8 +16,7 @@ galaxy_info:
         - all
     - name: EL
       versions:
-        - 7
-        - 8
+        - all
     - name: Fedora
       versions:
         - all
