ansible-lint: All names should start with an uppercase letter.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for elasticsearch
 
-- name: restart elasticsearch
+- name: Restart elasticsearch
   ansible.builtin.service:
     name: elasticsearch
     state: restarted
