--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: test if elasticsearch_type is set correctly
+- name: Test if elasticsearch_type is set correctly
   ansible.builtin.assert:
     that:
       - elasticsearch_type is defined
@@ -8,14 +8,14 @@
       - elasticsearch_type in [ "elastic", "oss" ]
     quiet: yes
 
-- name: test if elasticsearch_network_host is set correctly
+- name: Test if elasticsearch_network_host is set correctly
   ansible.builtin.assert:
     that:
       - elasticsearch_network_host is defined
       - elasticsearch_network_host is string
     quiet: yes
 
-- name: test if elasticsearch_http_port is set correctly
+- name: Test if elasticsearch_http_port is set correctly
   ansible.builtin.assert:
     that:
       - elasticsearch_http_port is defined
@@ -24,14 +24,14 @@
       - elasticsearch_http_port <= 65536
     quiet: yes
 
-- name: test if elasticsearch_discovery_seed_hosts is set correctly
+- name: Test if elasticsearch_discovery_seed_hosts is set correctly
   ansible.builtin.assert:
     that:
       - elasticsearch_discovery_seed_hosts is defined
       - elasticsearch_discovery_seed_hosts is iterable
     quiet: yes
 
-- name: test if elasticsearch_cluster_initial_master_nodes is set correctly
+- name: Test if elasticsearch_cluster_initial_master_nodes is set correctly
   ansible.builtin.assert:
     that:
       - elasticsearch_cluster_initial_master_nodes is defined
